# ham-chain

./: README.md
ham-api/: package.json
ham-api/src/: app.module.ts
ham-end/: Cargo.toml
ham-end/node/: Cargo.toml
ham-end/pallets/ham/: Cargo.toml
ham-end/pallets/ham/src/: lib.rs
ham-end/pallets/template/src/: lib.rs
ham-end/runtime/: Cargo.toml
ham-end/runtime/src/: lib.rs
ham-front/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
ham-front/public/: index.html  manifest.json
ham-front/public/assets/: index.html
ham-front/src/: AccountSelector.tsx  App.js  App.tsx  Balances.js  Balances.tsx  Events.tsx  Interactor.tsx  Transfer.tsx  index.tsx
ham-front/src/HamOps/: CreateAnimal.tsx  CreateHam.js  CreateHam.tsx  Transfer.tsx  index.ts
ham-front/src/Pages/: CustomerView.tsx  FarmView.tsx  HamView.tsx  Login.tsx
ham-front/src/config/: types.json
ham-front/src/substrate-lib/: SubstrateContext.tsx  index.ts
ham-front/src/substrate-lib/components/: DeveloperConsole.ts  TxButton.tsx  index.ts
ham-front/src/utils/: index.js  index.ts  useAccount.ts  useAuth.ts
